[project]
name = "bongsang"
description = "The 'ComfyUI-Bongsang' is very useful tools for a diffusion model developer."
version = "1.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/bongsang/ComfyUI-Bongsang"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bongsang"
DisplayName = "ComfyUI-Bongsang"
Icon = "https://raw.githubusercontent.com/bongsang/ComfyUI-Bongsang/main/docs/app_icon.png"